--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="{{ path('blog_home') }}">Article <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Crée un article </a>
+                    <a class="nav-link" href="{{ path('blog_create') }}">Crée un article </a>
                 </li>
             </ul>
         </div>
